--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <span class="close" onclick="fecharlogin()">&times;</span>
         <div class="cadastro">
           <h1 class="log"><b>Login</b></h1>
-          <input type="text" placeholder="  Seu email..." id="email">
+          <input type="email" placeholder="  Seu email..." id="email">
           <input type="password" placeholder="  Sua senha..." id="senha">
-          <button id="entrar" placeholder="Entrar">
+          <button type="submit" id="entrar">Entrar</button>
         </div>
       </div>
     </div>
